--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>21</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.vonage</groupId>
+            <artifactId>client</artifactId>
+            <version>[6.1.0,7.0.0)</version>
+        </dependency>
     </dependencies>
 
     <build>
